--- a/MicroserviceStack/src/main/resources/bootstrap.yml
+++ b/MicroserviceStack/src/main/resources/bootstrap.yml
@@ -4,7 +4,12 @@ spring:
     config:
       server:
         git:
-          uri: 
+          uri: file://D:/Ankit jain Work/LEARNING/ksessions/ProjectRainbow/testing
+         
+    
+    consul:
+      config:
+        enabled: false
 
   autoconfigure:
     exclude : org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration  
@@ -12,6 +17,8 @@ spring:
 #Server port
 server:
   port : 8888
+  
+  
  
 
     
