--- a/MicroserviceStack/src/main/resources/bootstrap.yml
+++ b/MicroserviceStack/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: microservice-notification
+  application.name: microservice-config
   cloud:
     config:
       server:
