--- a/consul client/src/main/resources/application.properties
+++ b/consul client/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=9098
+spring.application.name: ankit-service
+spring.cloud.consul.host:localhost
+spring.cloud.consul.port:8500
+management.security.enabled=false
